Fix logo alignment on engage page for RTL languages
Fixes #1141

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -201,6 +201,9 @@ td .list-group {
     font-size: large;
     padding: 1em;
 }
+.dir-rtl .engage {
+    margin-right: 150px;
+}
 
 img.engage-icon {
     position: absolute;
